@@ -146,6 +146,8 @@ ok(SPVM::TestCase::Sys::Time->utimes("$test_dir"));
 
 ok(SPVM::TestCase::Sys::Time->timespec);
 
+ok(SPVM::TestCase::Sys::Time->timeval);
+
 SPVM::Fn->destroy_runtime_permanent_vars;
 
 my $end_memory_blocks_count = $api->get_memory_blocks_count;
