@@ -1,6 +1,7 @@
 0.554 2026-01-18
   [New Features]
     * Add Sys::Time::Timespec#clone method.
+    * Add Sys::Time::Timeval#clone method.
 0.553 2025-12-22
   [New Features]
     * Add Sys::Process#setsid method.
